--- a/layouts/shortcodes/attention_timeline.html
+++ b/layouts/shortcodes/attention_timeline.html
@@ -39,11 +39,11 @@
 </section>
 
 <section class="attention-timeline">
-  <div class="timeline-wrapper">
-    <div class="timeline-rail">
-      <div class="rail-stick"></div>
-    </div>
-    <div class="timeline-list">
+    <div class="timeline-wrapper">
+      <div class="timeline-rail">
+        <div class="rail-stick"></div>
+      </div>
+      <div class="timeline-list">
       {{ range $plan.weeks }}
       {{ $title := .title | lower }}
       {{ $isAttn := or (in $title "attent") (in $title "kv") }}
@@ -55,7 +55,7 @@
             <img class="icon" src="{{ relURL "media/icons/timeline/transformer.svg" }}" alt="transformer icon" />
           {{ end }}
         </div>
-        <div class="content" tabindex="0" role="button" aria-label="Open details for week {{ .week }}">
+        <div class="content" tabindex="0" role="button" aria-label="Open details for week {{ .week }}" title="Click for details and checklist (Enter to open)">
           <div class="header">
             <div class="left">
               <div class="week">Week {{ .week }}</div>
@@ -67,6 +67,11 @@
             </div>
           </div>
           <div class="summary">{{ .summary }}</div>
+          <div class="cta-row" aria-hidden="true">
+            <span class="cta-icon"></span>
+            <span class="cta-text">View details & checklist</span>
+            <span class="cta-chev">↗</span>
+          </div>
           <div class="overlay-template" hidden>
             <div class="overlay-header">
               <div class="overlay-week">Week {{ .week }}</div>
