--- a/layouts/shortcodes/attention_timeline.html
+++ b/layouts/shortcodes/attention_timeline.html
@@ -39,11 +39,9 @@
 </section>
 
 <section class="attention-timeline">
-    <div class="timeline-wrapper">
-      <div class="timeline-rail">
-        <div class="rail-stick"></div>
-      </div>
-      <div class="timeline-list">
+  <div class="timeline-wrapper">
+    <div class="timeline-rail"><div class="rail-stick"></div></div>
+    <div class="timeline-list">
       {{ range $plan.weeks }}
       {{ $title := .title | lower }}
       {{ $isAttn := or (in $title "attent") (in $title "kv") }}
@@ -67,11 +65,7 @@
             </div>
           </div>
           <div class="summary">{{ .summary }}</div>
-          <div class="cta-row" aria-hidden="true">
-            <span class="cta-icon"></span>
-            <span class="cta-text">View details & checklist</span>
-            <span class="cta-chev">↗</span>
-          </div>
+          <div class="cta-row" aria-hidden="true"><span class="cta-text">View details & checklist</span><span class="cta-chev">↗</span></div>
           <div class="overlay-template" hidden>
             <div class="overlay-header">
               <div class="overlay-week">Week {{ .week }}</div>
@@ -101,6 +95,7 @@
             </div>
           </div>
         </div>
+        <div class="week-sep" aria-hidden="true"></div>
       </div>
       {{ end }}
     </div>
